--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./data-source.ts",
+    "migration:run:dev": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./dist/data-source.js",
+    "migration:run": "node ./node_modules/typeorm/cli.js migration:run -d ./dist/data-source.js",
     "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create",
-    "migration:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./data-source.ts"
+    "migration:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./dist/data-source.js"
   },
   "dependencies": {
     "@nestjs/cache-manager": "2.2.2",
@@ -39,7 +40,10 @@
     "redis": "4.7.0",
     "reflect-metadata": "0.1.14",
     "rxjs": "7.8.1",
-    "typeorm": "0.3.20"
+    "typeorm": "0.3.20",
+    "tsconfig-paths": "^4.2.0",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "10.3.2",
@@ -65,9 +69,6 @@
     "supertest": "7.0.0",
     "ts-jest": "29.1.0",
     "ts-loader": "9.4.3",
-    "ts-node": "10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "5.1.3"
   },
   "jest": {
