--- a/package.json
+++ b/package.json
@@ -30,20 +30,22 @@
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.2.10",
     "@nestjs/platform-express": "10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "7.4.0",
     "@nestjs/typeorm": "10.0.2",
     "cache-manager": "5.7.3",
     "cache-manager-redis-store": "2.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "luxon": "^3.6.1",
     "pg": "8.12.0",
     "redis": "4.7.0",
     "reflect-metadata": "0.1.14",
     "rxjs": "7.8.1",
-    "typeorm": "0.3.20",
-    "tsconfig-paths": "^4.2.0",
     "ts-node": "10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "10.3.2",
