--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test": "jest --config jest.config.ts",
+    "test:e2e": "jest --config jest-e2e.config.ts --forceExit --detectOpenHandles",
+    "test:cov": "jest --config jest.config.ts --coverage",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:run:dev": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./dist/data-source.js",
     "migration:run": "node ./node_modules/typeorm/cli.js migration:run -d ./dist/data-source.js",
